k8s/tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-deployment
spec:
  selector:
    matchLabels:
      app: tracker
  replicas: 1
  template:
    metadata:
      labels:
        app: tracker
    spec:
      containers:
        - name: tracker
          image: tracker-app:latest
          imagePullPolicy: IfNotPresent
