k8s/tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-service
spec:
  selector:
    app: tracker
  ports:
    - protocol: TCP
      port: 8099
      targetPort: 8086
  type: ClusterIP
